--- a/templates/regles.html
+++ b/templates/regles.html
@@ -68,9 +68,9 @@
             <p>2. Le mot doit <strong>commencer par la lettre donnée</strong>.</p>
             <p>3. Signification des couleurs :</p>
             <ul>
-                <li><strong>ROUGE</strong> : Une lettre bien placée.</li>
-                <li><strong>JAUNE</strong> : Une lettre existe mais est mal placée.</li>
-                <li><strong>BLEU</strong> : Une lettre n'existe pas dans le mot.</li>
+                <li><strong>VERT</strong> : Lettre bien placée.</li>
+                <li><strong>JAUNE</strong> : Lettre présente dans le mot mais mal placée.</li>
+                <li><strong>GRIS</strong> : Lettre qui n'est pas présente dans le mot.</li>
             </ul>
             <p><strong>Solo :</strong> Trouvez le plus de mots possibles d'affilé pour faire le plus grand score !</p>
             <p><strong>Versus IA :</strong> Affrontez notre IA selon le niveau de difficulté choisi. Vous partagez la même grille, chacun son tour !</p>
