Ajout du boutton mot du jour

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -56,6 +56,7 @@
             <!-- Buttons to navigate to different modes -->
             <button class="menu-button" onclick="appUtils.goToLocation('/solo')">Solo</button>
             <button class="menu-button" onclick="appUtils.goToLocation('/versus_ia')">Versus IA</button>
+            <button class="menu-button" onclick="appUtils.goToLocation('/regles')">Mot du jour</button>
             <button class="menu-button" onclick="appUtils.goToLocation('/regles')">Règles</button>
         </div>
     </div>
