--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -54,7 +54,7 @@
           
         <div class="button-container">
             <!-- Buttons to navigate to different modes -->
-            <button class="menu-button" onclick="appUtils.goToLocation('/regles')" style="border : 3px black solid">Mot du jour</button>
+            <button class="menu-button" onclick="appUtils.goToLocation('/daily')" style="border : 3px black solid">Mot du jour</button>
             <button class="menu-button" onclick="appUtils.goToLocation('/solo')">Solo</button>
             <button class="menu-button" onclick="appUtils.goToLocation('/versus_ia')">Versus IA</button>
             <button class="menu-button" onclick="appUtils.goToLocation('/regles')">Règles</button>
