Ajout d'un décorateur pour le dialog de daily (j'en suis fier :)) avec verification de la victoire

--- a/app/templates/daily.html
+++ b/app/templates/daily.html
@@ -84,14 +84,16 @@
          *  
          * @function showDialog
          */
-        showDialog = ((fn) => (...args) => {
-            fn(...args);
-            const dialog = document.querySelector("dialog");
-            dialog.innerHTML = `
-                <h2 style="margin-top: 0px;">Victoire</h2>
-                <p><strong>Durée : </strong>38 secondes</p>
-                <p><strong>Essais : </strong>1</p>` + dialog.innerHTML.replace('<h2 style="margin-top: 0px;">', '<h2>');
-            document.querySelector("form").action = window.location.href.replace("daily", "solo");
+        showDialog = ((fn) => (showWord) => {
+            fn(showWord);
+            if (showWord === false){ //  If it's a victory
+                const dialog = document.querySelector("dialog");
+                dialog.innerHTML = `
+                    <h2 style="margin-top: 0px;">Victoire</h2>
+                    <p><strong>Durée : </strong>38 secondes</p>
+                    <p><strong>Essais : </strong>1</p>` + dialog.innerHTML.replace('<h2 style="margin-top: 0px;">', '<h2>');
+                document.querySelector("form").action = window.location.href.replace("daily", "solo");
+            }
         })(showDialog);
 
         /**
