--- a/app/templates/solo.html
+++ b/app/templates/solo.html
@@ -15,7 +15,7 @@
          * @param {boolean} [base64=false] - Whether to convert the response to Base64 format.
          * @returns {Promise<string>} The loaded data.
          */
-        appUtils.loadObj("/static/wallpaper.jpg", true).then((res) => {
+        appUtils.loadObj("/static/wallpaper.webp", true).then((res) => {
             /**
              * Executes a function when the DOM is loaded.
              *
