--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -39,7 +39,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Découvrez notre jeu inspiré de Tusmo, Sutom et du jeu télévisé Motus. Affrontez une IA aux niveaux de difficulté variés ou utilisez-la comme assistant en mode Solo pour améliorer votre stratégie et votre vocabulaire.">  
-    <meta name="keywords" content="jeu de lettres, Motus, Tusmo, Sutom, jeu de mots, intelligence artificielle, IA, défi, mode solo, assistant, stratégie, vocabulaire">  
+    <meta name="keywords" content="jeu de lettres, Motus, Tusmo, Sutom, jeu de mots, intelligence artificielle, IA, défi, mode solo, assistant, stratégie, vocabulaire">
+    <meta name="google-site-verification" content="o0YkKfNAniTkH-ildhzjcwBKGpQx1RdyQsJcpLE6kWU" />
     
     <!-- Page title -->
     <title>SUMOT</title>
