--- a/app/static/style.css
+++ b/app/static/style.css
@@ -281,7 +281,7 @@ dialog::backdrop {
 .next-button {
   position: absolute;
   border: 1px solid black;
-  width: 7rem;
+  /*width: 7rem;*/
   left: 50%;
   transform: translateX(-50%);
   background: #f0f0f0;
