--- a/app/templates/daily.html
+++ b/app/templates/daily.html
@@ -136,7 +136,11 @@
                     <h2 style="margin-top: 0px;">Victoire</h2>
                     <p><strong>Durée : </strong>${formatTimespan(Date.now()   - TIME_START)}</p>
                     <p><strong>Essais : </strong>${(cellBeforeFirstEmptyCell.index + 1) / NBLETTERS}</p>` + dialog.innerHTML.replace('<h2 style="margin-top: 0px;">', '<h2>');
-                document.querySelector("form").action = window.location.href.replace("daily", "solo");
+
+                /* Replace word */
+                const nextButton = document.querySelector("div.next-button");
+                nextButton.innerHTML = nextButton.innerHTML.replace("Mot Suivant", "Retour au menu");
+                nextButton.addEventListener("click", () => appUtils.emit("keydown", "ENTER"));
             }
         })(showDialog);
 
