--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -33,7 +33,7 @@
                     <div class="advanced-kpi--bottom">
                       <div class="advanced-kpi--bottom-second-stage">
                         <span class="date">Mar 22, 2017</span>
-                        <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </a>
                       </div>
                     </div>
@@ -51,7 +51,7 @@
                     <div class="advanced-kpi--bottom">
                       <div class="advanced-kpi--bottom-second-stage">
                         <span class="date">Mar 22, 2017</span>
-                        <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </a>
                       </div>
                     </div>
@@ -70,7 +70,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -88,7 +88,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -107,7 +107,7 @@
                     <div class="advanced-kpi--bottom">
                       <div class="advanced-kpi--bottom-second-stage">
                         <span class="date">Mar 22, 2017</span>
-                        <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </a>
                       </div>
                     </div>
@@ -125,7 +125,7 @@
                     <div class="advanced-kpi--bottom">
                       <div class="advanced-kpi--bottom-second-stage">
                         <span class="date">Mar 22, 2017</span>
-                        <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </a>
                       </div>
                     </div>
@@ -147,7 +147,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -165,7 +165,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -183,7 +183,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -204,7 +204,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -222,7 +222,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -240,7 +240,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source" href="" title="">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -250,6 +250,13 @@
           </div>
         </ods-dataset-context>
       </section>
+    </div>
+    <div id="open-modal" class="modal-window">
+        <div class="modal-backdrop"></div>
+        <div class="modal">
+            <span class="modal-close">✖</span>
+            <iframe id="modal-iframe"></iframe>
+        </div>
     </div>
     <script src="{{ url_for('static', filename='dashboard.js') }}"></script>
   </body>
