--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -33,7 +33,7 @@
                     <div class="advanced-kpi--bottom">
                       <div class="advanced-kpi--bottom-second-stage">
                         <span class="date">Mar 22, 2017</span>
-                        <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </a>
                       </div>
                     </div>
@@ -51,7 +51,7 @@
                     <div class="advanced-kpi--bottom">
                       <div class="advanced-kpi--bottom-second-stage">
                         <span class="date">Mar 22, 2017</span>
-                        <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </a>
                       </div>
                     </div>
@@ -70,7 +70,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -88,7 +88,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -107,7 +107,7 @@
                     <div class="advanced-kpi--bottom">
                       <div class="advanced-kpi--bottom-second-stage">
                         <span class="date">Mar 22, 2017</span>
-                        <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </a>
                       </div>
                     </div>
@@ -125,7 +125,7 @@
                     <div class="advanced-kpi--bottom">
                       <div class="advanced-kpi--bottom-second-stage">
                         <span class="date">Mar 22, 2017</span>
-                        <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </a>
                       </div>
                     </div>
@@ -147,7 +147,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -165,7 +165,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -183,7 +183,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -204,7 +204,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -222,7 +222,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -240,7 +240,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="bdd=1">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
