--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -7,6 +7,7 @@
     <!-- ODS Platform CSS - must be hosted on static : WIP -->
     <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4124551/ods.css" />
     <link rel="stylesheet" href="https://codelibrary.opendatasoft.com/css/theme.css" />
+    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
@@ -21,14 +22,15 @@
             </div>
             <div class="grid md:grid-3">
               <div class="grid">
-                <div class="cell-1 box white flat">
+                <div class="cell-1 box flat content skeleton request" aria-related="#cell1" aria-txt="#txt-cell1" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
+                <div class="cell-1 box white flat hidden" id="cell1">
                   <div class="advanced-kpi">
                     <div class="advanced-kpi--top">
                       <h3 class="title"> Population </h3>
                       <p class="description"> en 2012 </p>
                     </div>
                     <div class="advanced-kpi--middle centered">
-                      <p class="value" ods-aggregation="agg" ods-aggregation-context="stats" ods-aggregation-function="SUM" ods-aggregation-expression="population_en_2012"> 65,241,241 </p>
+                      <p class="value" id="txt-cell1"></p>
                     </div>
                     <div class="advanced-kpi--bottom">
                       <div class="advanced-kpi--bottom-second-stage">
@@ -39,14 +41,15 @@
                     </div>
                   </div>
                 </div>
-                <div class="cell-1 box white flat">
+                <div class="cell-1 box flat content skeleton request" aria-related="#cell2" aria-txt="#txt-cell2" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
+                <div class="cell-1 box white flat hidden" id="cell2">
                   <div class="advanced-kpi">
                     <div class="advanced-kpi--top">
                       <h3 class="title"> Nombre de ménages </h3>
                       <p class="description"> en 2012 </p>
                     </div>
                     <div class="advanced-kpi--middle centered">
-                      <p class="value" ods-aggregation="agg" ods-aggregation-context="stats" ods-aggregation-function="SUM" ods-aggregation-expression="menages_en_2012"> 65,241,241 </p>
+                      <p class="value"  id="txt-cell2"></p>
                     </div>
                     <div class="advanced-kpi--bottom">
                       <div class="advanced-kpi--bottom-second-stage">
