--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -20,48 +20,27 @@
               <h1> Observatoire statistiques de la population Française </h1>
               <p> Ensemble de données synthétiques pour les thèmes suivants : population, logement, revenus, emploi-chômage et établissements. </p>
             </div>
-            <div class="grid md:grid-3">
-              <div class="grid">
-                <div class="cell-1 box flat content skeleton request" aria-related="#cell1" aria-txt="#txt-cell1" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
-                <div class="cell-1 box white flat hidden" id="cell1">
-                  <div class="advanced-kpi">
-                    <div class="advanced-kpi--top">
-                      <h3 class="title"> Population </h3>
-                      <p class="description"> en 2012 </p>
-                    </div>
-                    <div class="advanced-kpi--middle centered">
-                      <p class="value" id="txt-cell1"></p>
-                    </div>
-                    <div class="advanced-kpi--bottom">
-                      <div class="advanced-kpi--bottom-second-stage">
-                        <span class="date">Mar 22, 2017</span>
-                        <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        </a>
-                      </div>
-                    </div>
+            <div class="grid own-grid">
+              <div style="grid-area: 1 / 1 / 2 / 2;" class="box flat content skeleton request" aria-related="#cell1" aria-txt="#txt-cell1" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
+              <div style="grid-area: 1 / 1 / 2 / 2;" class="box white flat hidden" id="cell1">
+                <div class="advanced-kpi">
+                  <div class="advanced-kpi--top">
+                    <h3 class="title"> Population </h3>
+                    <p class="description"> en 2012 </p>
                   </div>
-                </div>
-                <div class="cell-1 box flat content skeleton request" aria-related="#cell2" aria-txt="#txt-cell2" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
-                <div class="cell-1 box white flat hidden" id="cell2">
-                  <div class="advanced-kpi">
-                    <div class="advanced-kpi--top">
-                      <h3 class="title"> Nombre de ménages </h3>
-                      <p class="description"> en 2012 </p>
-                    </div>
-                    <div class="advanced-kpi--middle centered">
-                      <p class="value"  id="txt-cell2"></p>
-                    </div>
-                    <div class="advanced-kpi--bottom">
-                      <div class="advanced-kpi--bottom-second-stage">
-                        <span class="date">Mar 22, 2017</span>
-                        <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        </a>
-                      </div>
+                  <div class="advanced-kpi--middle centered">
+                    <p class="value" id="txt-cell1"></p>
+                  </div>
+                  <div class="advanced-kpi--bottom">
+                    <div class="advanced-kpi--bottom-second-stage">
+                      <span class="date">Mar 22, 2017</span>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      </a>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="md:cell-2 box white flat">
+              <div style="grid-area: 1 / 2 / 2 / 4;" class="box white flat">
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title"> Evolution de la population </h3>
@@ -79,7 +58,7 @@
                   </div>
                 </div>
               </div>
-              <div class="md:cell-2 box white flat">
+              <div style="grid-area: 2 / 1 / 3 / 4;" class="box white flat">
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title"> Naissance par métropole </h3>
@@ -97,55 +76,14 @@
                   </div>
                 </div>
               </div>
-              <div class="grid">
-                <div class="cell-1 box white flat">
-                  <div class="advanced-kpi">
-                    <div class="advanced-kpi--top">
-                      <h3 class="title"> Actifs </h3>
-                      <p class="description"> 15 - 64 ans en 2012 </p>
-                    </div>
-                    <div class="advanced-kpi--middle centered">
-                      <p class="value" ods-aggregation="agg" ods-aggregation-context="stats" ods-aggregation-function="SUM" ods-aggregation-expression="actifs_15_64_ans_en_2012"> 65,241,241 </p>
-                    </div>
-                    <div class="advanced-kpi--bottom">
-                      <div class="advanced-kpi--bottom-second-stage">
-                        <span class="date">Mar 22, 2017</span>
-                        <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="cell-1 box white flat">
-                  <div class="advanced-kpi">
-                    <div class="advanced-kpi--top">
-                      <h3 class="title"> Chomeurs </h3>
-                      <p class="description"> 15 - 64 ans en 2012 </p>
-                    </div>
-                    <div class="advanced-kpi--middle centered">
-                      <p class="value" ods-aggregation="agg" ods-aggregation-context="stats" ods-aggregation-function="SUM" ods-aggregation-expression="chomeurs_15_64_ans_en_2012"> 65,241,241 </p>
-                    </div>
-                    <div class="advanced-kpi--bottom">
-                      <div class="advanced-kpi--bottom-second-stage">
-                        <span class="date">Mar 22, 2017</span>
-                        <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <h2 class="mb-2"> Logements </h2>
-            <div class="grid md:grid-3">
-              <div class="box white flat">
+              <div style="grid-area: 3 / 1 / 4 / 4;" class="box white flat">
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Nombre de logements </h3>
-                    <p class="description"> en 2012 </p>
+                    <h3 class="title"> Naissance par métropole </h3>
+                    <p class="description"> De 2007 à 2012 </p>
                   </div>
-                  <div class="advanced-kpi--middle centered">
-                    <p class="value" ods-aggregation="agg" ods-aggregation-context="stats" ods-aggregation-function="SUM" ods-aggregation-expression="logements_en_2012"> 65,241,241 </p>
+                  <div class="advanced-kpi--middle no-bg mb-0">
+                    <canvas id="chart3"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
@@ -156,14 +94,14 @@
                   </div>
                 </div>
               </div>
-              <div class="box white flat">
+              <div style="grid-area: 3 / 1 / 4 / 4;" class="box white flat">
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Résidences principales </h3>
-                    <p class="description"> en 2012 </p>
+                    <h3 class="title"> Naissance par métropole </h3>
+                    <p class="description"> De 2007 à 2012 </p>
                   </div>
-                  <div class="advanced-kpi--middle centered">
-                    <p class="value" ods-aggregation="agg" ods-aggregation-context="stats" ods-aggregation-function="SUM" ods-aggregation-expression="residences_principales_en_2012"> 65,241,241 </p>
+                  <div class="advanced-kpi--middle no-bg mb-0">
+                    <canvas id="chart4"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
@@ -174,14 +112,14 @@
                   </div>
                 </div>
               </div>
-              <div class="box white flat">
+              <div style="grid-area: 4 / 1 / 5 / 3;" class="box white flat">
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Résidences secondaires et logts occasionnels </h3>
-                    <p class="description"> en 2012 </p>
+                    <h3 class="title"> Naissance par métropole </h3>
+                    <p class="description"> De 2007 à 2012 </p>
                   </div>
-                  <div class="advanced-kpi--middle centered">
-                    <p class="value" ods-aggregation="agg" ods-aggregation-context="stats" ods-aggregation-function="SUM" ods-aggregation-expression="res_secondaires_et_logts_occasionnels_en_2012"> 65,241,241 </p>
+                  <div class="advanced-kpi--middle no-bg mb-0">
+                    <canvas id="chart5"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
@@ -192,17 +130,15 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <h2 class="mb-2"> Ménages fiscaux </h2>
-            <div class="grid md:grid-3">
-              <div class="box white flat">
+              <div style="grid-area: 4 / 3 / 5 / 4;" class="box flat content skeleton request" aria-related="#cell2" aria-txt="#txt-cell2" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
+              <div style="grid-area: 4 / 3 / 5 / 4;" class="box white flat hidden" id="cell2">
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Nombre de ménages fiscaux </h3>
+                    <h3 class="title"> Population </h3>
                     <p class="description"> en 2012 </p>
                   </div>
                   <div class="advanced-kpi--middle centered">
-                    <p class="value" ods-aggregation="agg" ods-aggregation-context="stats" ods-aggregation-function="SUM" ods-aggregation-expression="nombre_de_menages_fiscaux_en_2012"> 65,241,241 </p>
+                    <p class="value" id="txt-cell2"></p>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
@@ -213,14 +149,14 @@
                   </div>
                 </div>
               </div>
-              <div class="box white flat">
+              <div style="grid-area: 5 / 1 / 6 / 2;" class="box white flat">
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Part des ménages fiscaux imposés </h3>
-                    <p class="description"> en 2012 </p>
+                    <h3 class="title"> Naissance par métropole </h3>
+                    <p class="description"> De 2007 à 2012 </p>
                   </div>
-                  <div class="advanced-kpi--middle centered">
-                    <p class="value" ods-aggregation="agg" ods-aggregation-context="stats" ods-aggregation-function="SUM" ods-aggregation-expression="part_des_menages_fiscaux_imposes_en_2012"> 65,241,241 </p>
+                  <div class="advanced-kpi--middle no-bg mb-0">
+                    <canvas id="chart6"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
@@ -231,14 +167,14 @@
                   </div>
                 </div>
               </div>
-              <div class="box white flat">
+              <div style="grid-area: 5 / 2 / 6 / 4;" class="box white flat">
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Mediane du revenu disponible par US </h3>
-                    <p class="description"> en 2012 </p>
+                    <h3 class="title"> Naissance par métropole </h3>
+                    <p class="description"> De 2007 à 2012 </p>
                   </div>
-                  <div class="advanced-kpi--middle centered">
-                    <p class="value" ods-aggregation="agg" ods-aggregation-context="stats" ods-aggregation-function="AVG" ods-aggregation-expression="mediane_du_revenu_disponible_par_uc_en_2012"> 65,241,241 </p>
+                  <div class="advanced-kpi--middle no-bg mb-0">
+                    <canvas id="chart7"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
