--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-geo"></script>
   </head>
   <body>
     <div ng-app="ods-widgets">
