--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -22,17 +22,17 @@
               <p> Ensemble de données synthétiques pour les thèmes suivants : population, logement, revenus, emploi-chômage et établissements. </p>
             </div>
             <div class="grid own-grid">
-              <div style="grid-area: 1 / 1 / 2 / 2;" class="box flat content skeleton request" aria-related="#cell1" aria-txt="#txt-cell1" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
+              <div style="grid-area: 1 / 1 / 2 / 2;" class="box flat content skeleton request" aria-related="cell1" aria-txt="txt-cell1" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
               <div style="grid-area: 1 / 1 / 2 / 2;" class="box white flat hidden" id="cell1">
                 <div class="advanced-kpi">
-                  <div class="advanced-kpi--top">
+                  <div class="advanced-kpi--top text-cell">
                     <h3 class="title"> Population </h3>
                     <p class="description"> en 2012 </p>
                   </div>
-                  <div class="advanced-kpi--middle centered">
+                  <div class="advanced-kpi--middle centered text-cell">
                     <p class="value" id="txt-cell1"></p>
                   </div>
-                  <div class="advanced-kpi--bottom">
+                  <div class="advanced-kpi--bottom text-cell">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
                       <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
@@ -131,17 +131,17 @@
                   </div>
                 </div>
               </div>
-              <div style="grid-area: 4 / 3 / 5 / 4;" class="box flat content skeleton request" aria-related="#cell2" aria-txt="#txt-cell2" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
+              <div style="grid-area: 4 / 3 / 5 / 4;" class="box flat content skeleton request" aria-related="cell2" aria-txt="txt-cell2" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
               <div style="grid-area: 4 / 3 / 5 / 4;" class="box white flat hidden" id="cell2">
                 <div class="advanced-kpi">
-                  <div class="advanced-kpi--top">
+                  <div class="advanced-kpi--top text-cell">
                     <h3 class="title"> Population </h3>
                     <p class="description"> en 2012 </p>
                   </div>
-                  <div class="advanced-kpi--middle centered">
+                  <div class="advanced-kpi--middle centered text-cell">
                     <p class="value" id="txt-cell2"></p>
                   </div>
-                  <div class="advanced-kpi--bottom">
+                  <div class="advanced-kpi--bottom text-cell">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
                       <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
