Improve dashboard style

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -101,8 +101,19 @@
                     <h3 class="title"> Naissance par métropole </h3>
                     <p class="description"> De 2007 à 2012 </p>
                   </div>
-                  <div class="advanced-kpi--middle no-bg mb-0">
-                    <canvas id="chart4"></canvas>
+                  <div class="advanced-kpi--middle no-bg mb-0" style="display: grid; grid-template-columns: repeat(4, 25%); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
+                    <div style="grid-area: 1 / 1 / 2 / 2;">
+                      <canvas id="chart4-1"></canvas>
+                    </div>
+                    <div style="grid-area: 1 / 2 / 2 / 3;">
+                      <canvas id="chart4-2"></canvas>
+                    </div>
+                    <div style="grid-area: 1 / 3 / 2 / 4;">
+                      <canvas id="chart4-3"></canvas>
+                    </div>
+                    <div style="grid-area: 1 / 4 / 2 / 5;">
+                      <canvas id="chart4-4"></canvas>
+                    </div>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
@@ -174,8 +185,16 @@
                     <h3 class="title"> Naissance par métropole </h3>
                     <p class="description"> De 2007 à 2012 </p>
                   </div>
-                  <div class="advanced-kpi--middle no-bg mb-0">
-                    <canvas id="chart7"></canvas>
+                  <div class="advanced-kpi--middle no-bg mb-0" style="display: grid; grid-template-columns: repeat(3, calc(1/3  * 100%)); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
+                    <div style="grid-area: 1 / 1 / 2 / 2;">
+                      <canvas id="chart7-1"></canvas>
+                    </div>
+                    <div style="grid-area: 1 / 2 / 2 / 3;">
+                      <canvas id="chart7-2"></canvas>
+                    </div>
+                    <div style="grid-area: 1 / 3 / 2 / 4;">
+                      <canvas id="chart7-3"></canvas>
+                    </div>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
