Improve dashboard style

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -22,8 +22,8 @@
               <p> Ensemble de données synthétiques pour les thèmes suivants : population, logement, revenus, emploi-chômage et établissements. </p>
             </div>
             <div class="grid own-grid">
-              <div style="grid-area: 1 / 1 / 2 / 2;" class="box flat content skeleton request" aria-related="cell1" aria-txt="txt-cell1" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
-              <div style="grid-area: 1 / 1 / 2 / 2;" class="box white flat hidden" id="cell1">
+              <div style="grid-area: 1 / 1 / 2 / 2;" class="box white flat" id="cell1">
+                <div class="box flat content skeleton request" aria-txt="txt-cell1" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top text-cell">
                     <h3 class="title"> Population </h3>
@@ -42,6 +42,7 @@
                 </div>
               </div>
               <div style="grid-area: 1 / 2 / 2 / 4;" class="box white flat">
+                <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title"> Evolution de la population </h3>
@@ -60,6 +61,7 @@
                 </div>
               </div>
               <div style="grid-area: 2 / 1 / 3 / 4;" class="box white flat">
+                <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title"> Naissance par métropole </h3>
@@ -78,6 +80,7 @@
                 </div>
               </div>
               <div style="grid-area: 3 / 1 / 4 / 4;" class="box white flat">
+                <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title"> Naissance par métropole </h3>
@@ -96,6 +99,7 @@
                 </div>
               </div>
               <div style="grid-area: 3 / 1 / 4 / 4;" class="box white flat">
+                <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title"> Naissance par métropole </h3>
@@ -125,6 +129,7 @@
                 </div>
               </div>
               <div style="grid-area: 4 / 1 / 5 / 3;" class="box white flat">
+                <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title"> Naissance par métropole </h3>
@@ -142,8 +147,8 @@
                   </div>
                 </div>
               </div>
-              <div style="grid-area: 4 / 3 / 5 / 4;" class="box flat content skeleton request" aria-related="cell2" aria-txt="txt-cell2" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
-              <div style="grid-area: 4 / 3 / 5 / 4;" class="box white flat hidden" id="cell2">
+              <div style="grid-area: 4 / 3 / 5 / 4;" class="box white flat" id="cell2">
+                <div class="box flat content skeleton request" aria-txt="txt-cell2" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top text-cell">
                     <h3 class="title"> Population </h3>
@@ -162,6 +167,7 @@
                 </div>
               </div>
               <div style="grid-area: 5 / 1 / 6 / 2;" class="box white flat">
+                <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title"> Naissance par métropole </h3>
@@ -180,6 +186,7 @@
                 </div>
               </div>
               <div style="grid-area: 5 / 2 / 6 / 4;" class="box white flat">
+                <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title"> Naissance par métropole </h3>
