--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -22,7 +22,7 @@
               <p> Ensemble de données synthétiques pour les thèmes suivants : population, logement, revenus, emploi-chômage et établissements. </p>
             </div>
             <div class="grid own-grid">
-              <div style="grid-area: 1 / 1 / 2 / 2;" class="box white flat" id="cell1">
+              <div style="grid-area: 1 / 1 / 2 / 2; aspect-ratio: 1;" class="box white flat" id="cell1">
                 <div class="box flat content skeleton request" aria-txt="txt-cell1" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top text-cell">
@@ -41,14 +41,14 @@
                   </div>
                 </div>
               </div>
-              <div style="grid-area: 1 / 2 / 2 / 4;" class="box white flat">
+              <div style="grid-area: 1 / 2 / 2 / 4; aspect-ratio: 2; width: 100%; height: calc(100% - 0.4rem);" class="box white flat">
                 <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Evolution de la population </h3>
-                    <p class="description"> France 2007 et 2012 </p>
+                    <h3 class="title">Nombre d'utilisateurs quotidiens</h3>
+                    <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
-                  <div class="advanced-kpi--middle no-bg mb-0">
+                  <div class="advanced-kpi--middle no-bg mb-0 full-height">
                       <canvas id="chart1"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
@@ -60,14 +60,14 @@
                   </div>
                 </div>
               </div>
-              <div style="grid-area: 2 / 1 / 3 / 4;" class="box white flat">
+              <div style="grid-area: 2 / 1 / 3 / 4; aspect-ratio: 3/2; width: 100%; height: calc(100% - 0.6rem);" class="box white flat">
                 <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Naissance par métropole </h3>
-                    <p class="description"> De 2007 à 2012 </p>
+                    <h3 class="title">Répartition des utilisateurs dans le monde</h3>
+                    <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
-                  <div class="advanced-kpi--middle no-bg mb-0">
+                  <div class="advanced-kpi--middle no-bg mb-0 full-height">
                     <canvas id="chart2"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
@@ -79,33 +79,14 @@
                   </div>
                 </div>
               </div>
-              <div style="grid-area: 3 / 1 / 4 / 4;" class="box white flat">
+              <div style="grid-area: 3 / 1 / 4 / 4; aspect-ratio: 3; width: 100%; height: calc(100% - 0.8rem);" class="box white flat">
                 <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Naissance par métropole </h3>
-                    <p class="description"> De 2007 à 2012 </p>
+                    <h3 class="title">Taux de victoire</h3>
+                    <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
-                  <div class="advanced-kpi--middle no-bg mb-0">
-                    <canvas id="chart3"></canvas>
-                  </div>
-                  <div class="advanced-kpi--bottom">
-                    <div class="advanced-kpi--bottom-second-stage">
-                      <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div style="grid-area: 3 / 1 / 4 / 4;" class="box white flat">
-                <div class="box flat content skeleton"></div>
-                <div class="advanced-kpi">
-                  <div class="advanced-kpi--top">
-                    <h3 class="title"> Naissance par métropole </h3>
-                    <p class="description"> De 2007 à 2012 </p>
-                  </div>
-                  <div class="advanced-kpi--middle no-bg mb-0" style="display: grid; grid-template-columns: repeat(4, 25%); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
+                  <div class="advanced-kpi--middle no-bg mb-0 full-height" style="display: grid; grid-template-columns: repeat(4, 25%); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
                     <div style="grid-area: 1 / 1 / 2 / 2;">
                       <canvas id="chart4-1"></canvas>
                     </div>
@@ -128,14 +109,14 @@
                   </div>
                 </div>
               </div>
-              <div style="grid-area: 4 / 1 / 5 / 3;" class="box white flat">
+              <div style="grid-area: 4 / 1 / 5 / 3; aspect-ratio: 2; width: 100%; height: calc(100% - 0.4rem);" class="box white flat">
                 <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Naissance par métropole </h3>
-                    <p class="description"> De 2007 à 2012 </p>
+                    <h3 class="title">Répartition des temps pour trouver le mot en mode solo</h3>
+                    <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
-                  <div class="advanced-kpi--middle no-bg mb-0">
+                  <div class="advanced-kpi--middle no-bg mb-0 full-height">
                     <canvas id="chart5"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
@@ -147,7 +128,7 @@
                   </div>
                 </div>
               </div>
-              <div style="grid-area: 4 / 3 / 5 / 4;" class="box white flat" id="cell2">
+              <div style="grid-area: 4 / 3 / 5 / 4; aspect-ratio: 1;" class="box white flat" id="cell2">
                 <div class="box flat content skeleton request" aria-txt="txt-cell2" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top text-cell">
@@ -166,14 +147,14 @@
                   </div>
                 </div>
               </div>
-              <div style="grid-area: 5 / 1 / 6 / 2;" class="box white flat">
+              <div style="grid-area: 5 / 1 / 6 / 2; aspect-ratio: 1;" class="box white flat">
                 <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Naissance par métropole </h3>
-                    <p class="description"> De 2007 à 2012 </p>
+                    <h3 class="title">Nombre de partie par mode de jeu</h3>
+                    <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
-                  <div class="advanced-kpi--middle no-bg mb-0">
+                  <div class="advanced-kpi--middle no-bg mb-0 full-height">
                     <canvas id="chart6"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
@@ -185,14 +166,14 @@
                   </div>
                 </div>
               </div>
-              <div style="grid-area: 5 / 2 / 6 / 4;" class="box white flat">
+              <div style="grid-area: 5 / 2 / 6 / 4; aspect-ratio: 2; width: 100%; height: calc(100% - 0.4rem);" class="box white flat">
                 <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title"> Naissance par métropole </h3>
-                    <p class="description"> De 2007 à 2012 </p>
+                    <h3 class="title">Evolution du nombre d'utilisateurs</h3>
+                    <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
-                  <div class="advanced-kpi--middle no-bg mb-0" style="display: grid; grid-template-columns: repeat(3, calc(1/3  * 100%)); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
+                  <div class="advanced-kpi--middle no-bg mb-0 full-height" style="display: grid; grid-template-columns: repeat(3, calc(1/3  * 100%)); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
                     <div style="grid-area: 1 / 1 / 2 / 2;">
                       <canvas id="chart7-1"></canvas>
                     </div>
