Undo / Correct script.js

--- a/app/templates/daily.html
+++ b/app/templates/daily.html
@@ -152,6 +152,20 @@
          * @param {function} callback - The callback function to execute when the event is triggered.
          */
         appUtils.subscribe("keydown", (key) => enterKey(key));
+
+        appUtils.subscribe("endGame", (data) => {
+            fetch("/log-session", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(Object.assign({
+                    mode  : "daily",
+                    word  : real_word,
+                    time : Date.now()   - TIME_START
+                }, data))
+            });
+        });
     </script>
 </head>
 <body>
