--- a/app/templates/solo.html
+++ b/app/templates/solo.html
@@ -80,6 +80,12 @@
         const PLAYERTURN = -1;
 
         /**
+         *  
+         * @type {number}
+         */
+         const TIME_START = Date.now();
+
+        /**
          * Subscribes to the keydown event and triggers the enterKey function.
          *
          * @function subscribe
@@ -87,6 +93,20 @@
          * @param {function} callback - The callback function to execute when the event is triggered.
          */
         appUtils.subscribe("keydown", (key) => enterKey(key));
+
+        appUtils.subscribe("endGame", (data) => {
+            fetch("/log-session", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(Object.assign({
+                    mode  : "solo",
+                    word  : real_word,
+                    time : Date.now()   - TIME_START
+                }, data))
+            });
+        });
     </script>
 </head>
 <body>
