--- a/app/templates/versusia.html
+++ b/app/templates/versusia.html
@@ -81,6 +81,12 @@
         const PLAYERTURN = Math.floor(Math.random() * 2);
 
         /**
+         *  
+         * @type {number}
+         */
+         const TIME_START = Date.now();
+
+        /**
          * The initial difficulty value, loaded from local storage or set to 1 (Middle) if not found.
          * @type {number}
          */
@@ -254,6 +260,19 @@
                     });
                 }
             }
+        });
+
+        fetch("/log-session", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(Object.assign({
+                    mode  : "daily",
+                    word  : real_word,
+                    time : Date.now()   - TIME_START,
+                    difficulty : difficultyVal
+                }, data))
         });
     </script>
 </head>
