Update dashboard.js and log query (add country)

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -23,7 +23,7 @@
             </div>
             <div class="grid own-grid">
               <div style="grid-area: 1 / 1 / 2 / 2; aspect-ratio: 1;" class="box white flat" id="cell1">
-                <div class="box flat content skeleton request" aria-txt="txt-cell1" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
+                <div class="box flat content skeleton request" aria-txt="txt-cell1" aria-params="collection=logs&aggs='PIPELINE'"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top text-cell">
                     <h3 class="title"> Population </h3>
@@ -35,7 +35,7 @@
                   <div class="advanced-kpi--bottom text-cell">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -54,7 +54,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -73,7 +73,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -103,7 +103,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -122,14 +122,14 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
                 </div>
               </div>
               <div style="grid-area: 4 / 3 / 5 / 4; aspect-ratio: 1;" class="box white flat" id="cell2">
-                <div class="box flat content skeleton request" aria-txt="txt-cell2" aria-params="collection=COLLECTION&aggs='PIPELINE'"></div>
+                <div class="box flat content skeleton request" aria-txt="txt-cell2" aria-params="collection=logs&aggs='PIPELINE2'"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top text-cell">
                     <h3 class="title"> Population </h3>
@@ -141,7 +141,7 @@
                   <div class="advanced-kpi--bottom text-cell">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -160,7 +160,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -187,7 +187,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=COLLECTION&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
