Correct dashboard style

--- a/app/templates/table.html
+++ b/app/templates/table.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" style="position: absolute;top: 50%;transform: translateY(-50%);width: 100%;background-color: #F2F3F8; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
+<html lang="fr" style="position: absolute;top: 50%;transform: translateY(-50%);width: 100%;background-color: #F2F3F8; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leave Workflow Management</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="{{ url_for('static', filename='libs/tailwindcss.js') }}"></script>
   <script>
     function ajusterLignes(page) {
         const nav =  document.querySelector("nav");
