--- a/app/static/dashboard.css
+++ b/app/static/dashboard.css
@@ -215,6 +215,8 @@ h3 {
 
 canvas {
     place-self: center;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /* Modal*/
@@ -322,4 +324,6 @@ canvas {
 
 .full-height {
     height: 100%;
+    max-height: 100%;
+    contain: size;
 }
