--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,16 +1,14 @@
 <!-- https://codelibrary.opendatasoft.com/page-templates/dashboard/ -->
 <html>
   <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://static.opendatasoft.com/ods-widgets/latest-v2/ods-widgets.css" />
-    <!-- ODS Platform CSS - must be hosted on static : WIP -->
-    <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4124551/ods.css" />
-    <link rel="stylesheet" href="https://codelibrary.opendatasoft.com/css/theme.css" />
-    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='libs/normalize.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='libs/ods-widgets.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='libs/ods.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='libs/theme.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='libs/material-components-web.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-geo"></script>
+    <script src="{{ url_for('static', filename='libs/chart.js') }}"></script>
+    <script src="{{ url_for('static', filename='libs/chartjs-chart-geo.js') }}"></script>
   </head>
   <body>
     <div ng-app="ods-widgets">
@@ -87,16 +85,16 @@
                     <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
                   <div class="advanced-kpi--middle no-bg mb-0 full-height" style="display: grid; grid-template-columns: repeat(4, 25%); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
-                    <div style="grid-area: 1 / 1 / 2 / 2;">
+                    <div style="grid-area: 1 / 1 / 2 / 2;" class="full-height">
                       <canvas id="chart4-1"></canvas>
                     </div>
-                    <div style="grid-area: 1 / 2 / 2 / 3;">
+                    <div style="grid-area: 1 / 2 / 2 / 3;"  class="full-height">
                       <canvas id="chart4-2"></canvas>
                     </div>
-                    <div style="grid-area: 1 / 3 / 2 / 4;">
+                    <div style="grid-area: 1 / 3 / 2 / 4;" class="full-height">
                       <canvas id="chart4-3"></canvas>
                     </div>
-                    <div style="grid-area: 1 / 4 / 2 / 5;">
+                    <div style="grid-area: 1 / 4 / 2 / 5;" class="full-height">
                       <canvas id="chart4-4"></canvas>
                     </div>
                   </div>
